--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "elmogy/fatoora-zatca",
     "description": "this package handle the stage 2 of zatca for integration the tax and simpilified tax invoices.",
     "type": "library",
+    "license": "proprietary",
     "autoload": {
         "psr-4": {
             "Bl\\FatooraZatca\\": "src/"
@@ -13,8 +14,8 @@
         }
     ],
     "require": {
-        "phpseclib/phpseclib":"^3.0",
-        "simplesoftwareio/simple-qrcode":"4.2.0"
+        "phpseclib/phpseclib": "^3.0",
+        "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "extra": {
         "laravel": {
